@@ -8,6 +8,7 @@ Release 0.21.0 - Unreleased
    HBASE-1737  Regions unbalanced when adding new node (recommit)
    HBASE-1792  [Regression] Cannot save timestamp in the future
    HBASE-1793  [Regression] HTable.get/getRow with a ts is broken
+   HBASE-1698  Review documentation for o.a.h.h.mapreduce
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
